fix catalogue items on mobile and change title

--- a/client/src/pages/Catalogue/CatalogueHeader/CatalogueHeader.module.scss
+++ b/client/src/pages/Catalogue/CatalogueHeader/CatalogueHeader.module.scss
@@ -22,6 +22,11 @@
     margin-right: 10px;
   }
 
+  .CatalogueHeader_Sorting_Wrapper {
+    position: relative;
+    display: inline-block;
+  }
+
   .CatalogueHeader_SortingItems {
     display: flex;
     flex-direction: column;
@@ -30,10 +35,21 @@
     border: 2px solid $yellow;
     border-radius: 0px 0px 10px 10px;
     position: absolute;
-    bottom: -83px;
+    width: 100%;
+    min-width: max-content;
     align-items: center;
     z-index: 1000;
-    left: 114px;
+    top: 87%;
+
+    li {
+      &:first-child {
+        border-radius: 0px 0px 7px 7px;
+        border-top: none;
+      }
+      &:last-child {
+        border-bottom: none;
+      }
+    }
   }
 }
 
@@ -120,10 +136,5 @@
       transform: rotate(0deg);
     }
   } 
-
-    &:first-child:hover{
-    border: 2px solid $yellow;
-    border-radius: 0px 0px 7px 7px;
-  }
 }
 }
